@@ -165,35 +165,31 @@ sub masonParameters
         push(@params, 'softwareInstalled' => 1);
     }
 
-    my $showMessage = 0;
-    my $rs = EBox::Global->modInstance('remoteservices');
-    if (defined ($rs) and $rs->subscriptionLevel() >= 0) {
-        try {
-            # Re-check for changes
-            $rs->checkAdMessages();
-            my $rsMsg = $rs->adMessages();
-            $showMessage = 0;
-            push (@params, 'message' => $rsMsg) if ($rsMsg->{text});
-        } catch($ex) {
-            EBox::error("Error loading messages from remoteservices: $ex");
-        }
+    my $showMessage = 1;
+    if (EBox::Global->communityEdition()) {
+        my $RELEASE_ANNOUNCEMENT_URL = 'http://wiki.zentyal.org/wiki/Zentyal_4.1_Announcement';
+        my $upgradeAction = "releaseUpgrade('Upgrading to Zentyal 4.1')";
+        my $msg = { name => 'upgrade', text =>__sx('{oh}Zentyal 4.1{ch} is available! {ob}Upgrade now{cb}',
+                    oh => "<a target=\"_blank\" href=\"$RELEASE_ANNOUNCEMENT_URL\">", ch => '</a>',
+                    ob => "<button style=\"margin-left: 20px; margin-top: -6px; margin-bottom: -6px;\" onclick=\"$upgradeAction\">", cb => '</button>') };
+        push (@params, 'message' => $msg);
     }
 
-    if ($showMessage) {
-        my $state = $sysinfo->get_state();
-        my $lastTime = $state->{lastMessageTime};
-        my $currentTime = time();
-        my $offset = ($currentTime - $lastTime) / 60 / 24;
-        foreach my $msg (@{_periodicMessages()}) {
-            my $name = $msg->{name};
-            next if ($state->{closedMessages}->{$name});
-            my $text = $msg->{text};
-            if ($offset >= $msg->{days}) {
-                push (@params, 'message' => $msg);
-                last;
-            }
-        }
-    }
+#    if ($showMessage) {
+#        my $state = $sysinfo->get_state();
+#        my $lastTime = $state->{lastMessageTime};
+#        my $currentTime = time();
+#        my $offset = ($currentTime - $lastTime) / 60 / 24;
+#        foreach my $msg (@{_periodicMessages()}) {
+#            my $name = $msg->{name};
+#            next if ($state->{closedMessages}->{$name});
+#            my $text = $msg->{text};
+#            if ($offset >= $msg->{days}) {
+#                push (@params, 'message' => $msg);
+#                last;
+#            }
+#        }
+#    }
 
     # TODO: currently apport reports are only enabled for openchange
     if (EBox::Global->modExists('openchange')) {
