@@ -50,13 +50,13 @@ use EBox::Gettext;
 <div id="confirmation">
 
 <div class="note">
-<p>This will upgrade your Zentyal 3.5 to Zentyal 4.0 Community Edition.</p>
+<p>This will upgrade your Zentyal 4.0 to Zentyal 4.1 Development Edition.</p>
 <p>Close this dialog if you do not want to upgrade now.</p>
 </div>
 
 % if (@removedModules) {
 <div class="error">
-<p>The upgrade process will remove the following modules as they are no longer part of Zentyal 4.0 officially maintained modules (data related to these modules will be deleted):</p>
+<p>The upgrade process will remove the following modules as they are no longer part of Zentyal 4.1 officially maintained modules (data related to these modules will be deleted):</p>
 <ul>
 % foreach my $module (@removedModules) {
 <li><% $module %></li>
@@ -66,7 +66,7 @@ use EBox::Gettext;
 % }
 
 <div class="warning">
-<p>Before upgrading please read also carefully the <a target="_blank" href="http://wiki.zentyal.org/wiki/Zentyal_4.0_Announcement"><b>release notes</b></a>.</p>
+<p>Before upgrading please read also carefully the <a target="_blank" href="http://wiki.zentyal.org/wiki/Zentyal_4.1_Announcement"><b>release notes</b></a>.</p>
 </div>
 
 </div>
