@@ -1,4 +1,5 @@
 HEAD
+	+ Upgrade to Zentyal 4.1 button in dashboard
 	+ Removed support for SSLv2 & SSLv3. Using recommended ciphers from:
 	  https://wiki.mozilla.org/Security/Server_Side_TLS
 	  (contribution by theodorerambert)
